fix update customer
