# src/validate/customer.js
@@ -283,19 +283,6 @@ class CustomerValidate {
       });
     }
     if (data.email) {
-      // if (data.email.length > 50) {
-      //   throw ErrorModel.initWithParams({
-      //     ...ERROR.VALIDATION.INVALID_REQUEST,
-      //     message: 'Email không quá 50 kí tự',
-      //   });
-      // }
-      //   const checkWordUnsigned = Utils.checkWordUnsigned(data.email);
-      //   if (checkWordUnsigned == false) {
-      //     throw ErrorModel.initWithParams({
-      //       ...ERROR.VALIDATION.INVALID_REQUEST,
-      //       message: 'Email chỉ sử dụng (a-z),(0-9),(.),(@)',
-      //     });
-      //   }
       const vEmail = Validate.email(data.email);
       if (!vEmail) {
         throw ErrorModel.initWithParams({
@@ -309,153 +296,9 @@ class CustomerValidate {
         message: 'Email yêu cầu phải có',
       });
     }
-    // if (data.street && data.province && data.district && data.ward) {
-    //   if (data.street.length > 200) {
-    //     throw ErrorModel.initWithParams({
-    //       ...ERROR.VALIDATION.INVALID_REQUEST,
-    //       message: 'Địa chỉ đường người mua không quá 200 kí tự',
-    //     });
-    //   }
-    //   if (data.province.length > 50) {
-    //     throw ErrorModel.initWithParams({
-    //       ...ERROR.VALIDATION.INVALID_REQUEST,
-    //       message: 'Địa chỉ phường người mua không quá 50 kí tự',
-    //     });
-    //   }
-    //   if (data.district.length > 50) {
-    //     throw ErrorModel.initWithParams({
-    //       ...ERROR.VALIDATION.INVALID_REQUEST,
-    //       message: 'Địa chỉ quận người mua không quá 50 kí tự',
-    //     });
-    //   }
-    //   if (data.ward.length > 50) {
-    //     throw ErrorModel.initWithParams({
-    //       ...ERROR.VALIDATION.INVALID_REQUEST,
-    //       message: 'Địa chỉ thành phố/tỉnh người mua không quá 50 kí tự',
-    //     });
-    //   }
-    // } else {
-    //   throw ErrorModel.initWithParams({
-    //     ...ERROR.VALIDATION.INVALID_REQUEST,
-    //     message: 'Phải có địa chỉ người mua và phải đủ thông tin',
-    //   });
-    // }
   }
 
-  static updateShop(data) {
-    if (data.firstName) {
-      if (data.firstName.length > 25) {
-        throw ErrorModel.initWithParams({
-          ...ERROR.VALIDATION.INVALID_REQUEST,
-          message: 'Họ tên đệm người mua không quá 25 kí tự',
-        });
-      }
-      if (
-        data.firstName.length !=
-        data.firstName.replace(
-          /[-[\]{}()*+?.,\\/^$@!^&_=+;:'"<>`~|#%1234567890]/g,
-          '',
-        ).length
-      ) {
-        throw ErrorModel.initWithParams({
-          ...ERROR.VALIDATION.INVALID_REQUEST,
-          message: 'Họ và tên không hợp lệ',
-        });
-      }
-    } else {
-      throw ErrorModel.initWithParams({
-        ...ERROR.VALIDATION.INVALID_REQUEST,
-        message: 'Yêu cầu phải có họ tên đệm người mua',
-      });
-    }
-    if (data.lastName) {
-      if (data.lastName.length > 25) {
-        throw ErrorModel.initWithParams({
-          ...ERROR.VALIDATION.INVALID_REQUEST,
-          message: 'Tên người mua không quá 25 kí tự',
-        });
-      }
-      if (
-        data.lastName.length !=
-        data.lastName.replace(
-          /[-[\]{}()*+?.,\\/^$@!^&_=+;:'"<>`~|#%1234567890]/g,
-          '',
-        ).length
-      ) {
-        throw ErrorModel.initWithParams({
-          ...ERROR.VALIDATION.INVALID_REQUEST,
-          message: 'Họ và tên không hợp lệ',
-        });
-      }
-      if (data.lastName.length != data.lastName.replace(/\s+/g, '').length) {
-        throw ErrorModel.initWithParams({
-          ...ERROR.VALIDATION.INVALID_REQUEST,
-          message: 'Tên chỉ yêu cầu 1 từ',
-        });
-      }
-    } else {
-      throw ErrorModel.initWithParams({
-        ...ERROR.VALIDATION.INVALID_REQUEST,
-        message: 'Yêu cầu phải có tên người mua',
-      });
-    }
-    // if (data.taxCode) {
-    //   if (Utils.validateNumberInString(data.taxCode)) {
-    //     if (data.taxCode.length > 13 || data.taxCode.length < 10) {
-    //       throw ErrorModel.initWithParams({
-    //         ...ERROR.VALIDATION.INVALID_REQUEST,
-    //         message: 'Mã số thuế là 10 hoặc 13 chữ số',
-    //       });
-    //     }
-    //   } else {
-    //     throw ErrorModel.initWithParams({
-    //       ...ERROR.VALIDATION.INVALID_REQUEST,
-    //       message: 'Mã số thuế không hợp lệ',
-    //     });
-    //   }
-    // }
-    if (data.phone) {
-      // if (data.phone.length > 12) {
-      //   throw ErrorModel.initWithParams({
-      //     ...ERROR.VALIDATION.INVALID_REQUEST,
-      //     message: 'Số điện thoại người mua hàng không quá 12 kí tự',
-      //   });
-      // }
-      const vPhone = Validate.phone(data.phone);
-      if (!vPhone) {
-        throw ErrorModel.initWithParams({
-          ...ERROR.VALIDATION.INVALID_REQUEST,
-          message: 'Số điện thoại không hợp lệ',
-        });
-      }
-    }
-    if (data.email) {
-      // if (data.email.length > 50) {
-      //   throw ErrorModel.initWithParams({
-      //     ...ERROR.VALIDATION.INVALID_REQUEST,
-      //     message: 'Email không quá 50 kí tự',
-      //   });
-      // }
-      //   const checkWordUnsigned = Utils.checkWordUnsigned(data.email);
-      //   if (checkWordUnsigned == false) {
-      //     throw ErrorModel.initWithParams({
-      //       ...ERROR.VALIDATION.INVALID_REQUEST,
-      //       message: 'Email chỉ sử dụng (a-z),(0-9),(.),(@)',
-      //     });
-      //   }
-      const vEmail = Validate.email(data.email);
-      if (!vEmail) {
-        throw ErrorModel.initWithParams({
-          ...ERROR.VALIDATION.INVALID_REQUEST,
-          message: 'Email không hợp lệ',
-        });
-      }
-    } else {
-      throw ErrorModel.initWithParams({
-        ...ERROR.VALIDATION.INVALID_REQUEST,
-        message: 'Email yêu cầu phải có',
-      });
-    }
+  static updateAddress(data) {
     if (data.address) {
       for (const i in data.address) {
         if (
